# VST_SDK_NAP

./: .gitignore  copy_vst2_to_vst3_sdk.bat
VST3_Project_Generator/: README.md
VST3_SDK/: README.md
VST3_SDK/cmake/: README.md
VST3_SDK/cmake/modules/: AddCommonOptions.cmake  AddVST3Options.cmake  PlatformToolset.cmake  SMTG_DetectPlatform.cmake  SMTG_Platform_Windows.cmake
VST3_SDK/pluginterfaces/: CMakeLists.txt  README.md
VST3_SDK/public.sdk/: CMakeLists.txt  README.md
VST3_SDK/tools/: README.md
VST3_SDK/vst3_doc/: LICENSE.txt  README.md
VST3_SDK/vst3_doc/base/: base.tag
VST3_SDK/vst3_doc/basemodule/: base_module.tag
VST3_SDK/vst3_doc/vstexamples/: VSTInterAppAudioAppDelegate_8h.html  VSTInterAppAudioAppDelegate_8mm.html  VSTInterAppAudioHostUIControllerViewController_8mm.html  adelay_2source_2factory_8cpp.html  adelay_2source_2version_8h.html  adelaycontroller_8cpp.html  adelaycontroller_8h.html  adelayprocessor_8cpp.html  adelayprocessor_8h.html  again_2source_2version_8h.html  again_8cpp.html  again_8h.html  againaax_8cpp.html  againcontroller_8cpp.html  againcontroller_8h.html  againentry_8cpp.html  againentry__vst2_8cpp.html  againsidechain_8cpp.html  annotated.html  audiohost_8cpp.html  audiohost_8h.html  brownnoise_8h.html  channelcontext_2source_2plug_8cpp.html  channelcontext_2source_2plug_8h.html  channelcontext_2source_2plugcontroller_8cpp.html  channelcontext_2source_2plugcontroller_8h.html  channelcontext_2source_2plugentry_8cpp.html  channelcontext_2source_2version_8h.html  classEventListCheck.html  classEventLogger.html  classHostCheck.html  classParameterChangesCheck.html  classProcessContextCheck.html  classProcessSetupCheck.html  classSteinberg_1_1Vst_1_1ADelayController-members.html  classSteinberg_1_1Vst_1_1ADelayController.html  classSteinberg_1_1Vst_1_1ADelayController__inherit__graph.map  classSteinberg_1_1Vst_1_1ADelayController__inherit__graph.md5  classSteinberg_1_1Vst_1_1ADelayProcessor-members.html  classSteinberg_1_1Vst_1_1ADelayProcessor.html  (+523 more)
VST3_SDK/vst3_doc/vstinterfaces/: addownplugs.html  annotated.html  channelContextInfo.html  classSteinberg_1_1ITest-members.html  classSteinberg_1_1ITest.html  classSteinberg_1_1ITestFactory-members.html  classSteinberg_1_1ITestFactory.html  classSteinberg_1_1ITestFactory__inherit__graph.map  classSteinberg_1_1ITestFactory__inherit__graph.md5  classSteinberg_1_1ITestResult-members.html  classSteinberg_1_1ITestResult.html  classSteinberg_1_1ITestResult__inherit__graph.map  classSteinberg_1_1ITestResult__inherit__graph.md5  classSteinberg_1_1ITestSuite-members.html  classSteinberg_1_1ITestSuite.html  classSteinberg_1_1ITestSuite__inherit__graph.map  classSteinberg_1_1ITestSuite__inherit__graph.md5  classSteinberg_1_1ITest__inherit__graph.map  classSteinberg_1_1ITest__inherit__graph.md5  classSteinberg_1_1Vst_1_1ChannelContext_1_1IInfoListener-members.html  classSteinberg_1_1Vst_1_1ChannelContext_1_1IInfoListener.html  classSteinberg_1_1Vst_1_1ChannelContext_1_1IInfoListener__inherit__graph.map  classSteinberg_1_1Vst_1_1ChannelContext_1_1IInfoListener__inherit__graph.md5  classSteinberg_1_1Vst_1_1IAttributeList-members.html  classSteinberg_1_1Vst_1_1IAttributeList.html  classSteinberg_1_1Vst_1_1IAttributeList__inherit__graph.map  classSteinberg_1_1Vst_1_1IAttributeList__inherit__graph.md5  classSteinberg_1_1Vst_1_1IAudioPresentationLatency-members.html  classSteinberg_1_1Vst_1_1IAudioPresentationLatency.html  classSteinberg_1_1Vst_1_1IAudioPresentationLatency__inherit__graph.map  classSteinberg_1_1Vst_1_1IAudioPresentationLatency__inherit__graph.md5  classSteinberg_1_1Vst_1_1IAudioProcessor-members.html  classSteinberg_1_1Vst_1_1IAudioProcessor.html  classSteinberg_1_1Vst_1_1IAudioProcessor__inherit__graph.map  classSteinberg_1_1Vst_1_1IAudioProcessor__inherit__graph.md5  classSteinberg_1_1Vst_1_1IAutomationState-members.html  classSteinberg_1_1Vst_1_1IAutomationState.html  classSteinberg_1_1Vst_1_1IAutomationState__inherit__graph.map  classSteinberg_1_1Vst_1_1IAutomationState__inherit__graph.md5  classSteinberg_1_1Vst_1_1IComponent-members.html  (+274 more)
VST3_SDK/vst3_doc/vstsdk/: AUv3Wrapper.html  AudioIO_8mm.html  PresetBrowserViewController_8mm.html  PresetManager_8h.html  PresetManager_8mm.html  PresetSaveViewController_8mm.html  VST3Editor_8mm.html  VST3Plugin_8mm.html  annotated.html  applications.html  classSteinberg_1_1CPluginView-members.html  classSteinberg_1_1CPluginView.html  classSteinberg_1_1CPluginView__inherit__graph.map  classSteinberg_1_1CPluginView__inherit__graph.md5  classSteinberg_1_1MemoryStream-members.html  classSteinberg_1_1MemoryStream.html  classSteinberg_1_1MemoryStream__inherit__graph.map  classSteinberg_1_1MemoryStream__inherit__graph.md5  classSteinberg_1_1Vst_1_1AudioBuffer.html  classSteinberg_1_1Vst_1_1AudioBus.html  classSteinberg_1_1Vst_1_1AudioEffect-members.html  classSteinberg_1_1Vst_1_1AudioEffect.html  classSteinberg_1_1Vst_1_1AudioEffect__inherit__graph.map  classSteinberg_1_1Vst_1_1AudioEffect__inherit__graph.md5  classSteinberg_1_1Vst_1_1BufferStream-members.html  classSteinberg_1_1Vst_1_1BufferStream.html  classSteinberg_1_1Vst_1_1BufferStream__inherit__graph.map  classSteinberg_1_1Vst_1_1BufferStream__inherit__graph.md5  classSteinberg_1_1Vst_1_1Bus.html  classSteinberg_1_1Vst_1_1BusList.html  classSteinberg_1_1Vst_1_1BypassProcessor.html  classSteinberg_1_1Vst_1_1Component.html  (+189 more)
my_plugins/: CMakeLists.txt
my_plugins/helloworld_nap/: CMakeLists.txt
my_plugins/helloworld_nap/include/: controlthread.h  napinfo.h  plugcontroller.h  plugprocessor.h  version.h
my_plugins/helloworld_nap/lib/AppleClang--Debug/helloworld_nap.vst3/Contents/: Info.plist
my_plugins/helloworld_nap/resource/: Info.plist
my_plugins/helloworld_nap/source/: napinfo.cpp  plugcontroller.cpp  plugprocessor.cpp
my_plugins/napplugin/: CMakeLists.txt
my_plugins/napplugin/include/: controlthread.h  napinfo.h  packaginginfo.h  plugcontroller.h  plugids.h  plugprocessor.h  version.h
my_plugins/napplugin/source/: napinfo.cpp  plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
(+905 files in other folders)
